@@ -15,14 +15,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+package org.apache.giraph.io.accumulo;
 
-package org.apache.giraph.format.hbase;
-
+import org.apache.accumulo.core.client.mapreduce.AccumuloOutputFormat;
+import org.apache.accumulo.core.data.Mutation;
 import org.apache.giraph.graph.VertexOutputFormat;
 import org.apache.giraph.graph.VertexWriter;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.hbase.io.ImmutableBytesWritable;
-import org.apache.hadoop.hbase.mapreduce.TableOutputFormat;
+import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.mapreduce.JobContext;
@@ -31,72 +30,69 @@ import org.apache.hadoop.mapreduce.RecordWriter;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 
 import java.io.IOException;
-
 /**
  *
- * Base class for writing Vertex mutations back to specific
- * rows in an HBase table. This class wraps an instance of TableOutputFormat
- * for easy configuration with the existing properties.
+ *  Class which wraps the AccumuloOutputFormat. It's designed
+ *  as an extension point to VertexOutputFormat subclasses who wish
+ *  to write vertices back to an Accumulo table.
  *
- * Setting conf.set(TableOutputFormat.OUTPUT_TABLE, "out_table");
- * will properly delegate to the TableOutputFormat instance contained
- * in this class. The Configurable interface prevents specific
- * wrapper methods from having to be called.
+ *  Works with
+ *  {@link org.apache.giraph.io.accumulo.AccumuloVertexInputFormat}
  *
- * Works with {@link HBaseVertexInputFormat}
  *
- * @param <I> Vertex index value
- * @param <V> Vertex value
- * @param <E> Edge value
+ * @param <I> vertex id type
+ * @param <V>  vertex value type
+ * @param <E>  edge type
  */
-@SuppressWarnings("rawtypes")
-public abstract class HBaseVertexOutputFormat<
+public abstract class AccumuloVertexOutputFormat<
         I extends WritableComparable,
         V extends Writable,
         E extends Writable>
-        extends VertexOutputFormat
-                <I, V, E> {
+        extends VertexOutputFormat<I, V, E> {
+
 
   /**
-   * delegate output format that writes to HBase
+   * Output table parameter
    */
-  protected static TableOutputFormat<ImmutableBytesWritable>
-  BASE_FORMAT = new TableOutputFormat<ImmutableBytesWritable>();
+  protected static final String OUTPUT_TABLE = "OUTPUT_TABLE";
 
   /**
-   *   Constructor
-   *
-   *   Simple class which takes an instance of RecordWriter
-   *   over Writable objects. Subclasses are
-   *   expected to implement writeVertex()
-   *
-   * @param <I> Vertex index value
-   * @param <V> Vertex value
-   * @param <E> Edge value
+   * Accumulo delegate for table output
    */
-  public abstract static class HBaseVertexWriter<
+  protected AccumuloOutputFormat accumuloOutputFormat =
+          new AccumuloOutputFormat();
+
+  /**
+   *
+   * Main abstraction point for vertex writers to persist back
+   * to Accumulo tables.
+   *
+   * @param <I> vertex id type
+   * @param <V> vertex value type
+   * @param <E>  edge type
+   */
+  public abstract static class AccumuloVertexWriter<
           I extends WritableComparable,
           V extends Writable,
           E extends Writable>
           implements VertexWriter<I, V, E> {
 
     /**
-     * context
+     * task attempt context.
      */
     private TaskAttemptContext context;
 
     /**
-     * record writer instance
+     * Accumulo record writer
      */
-    private RecordWriter<ImmutableBytesWritable,
-              Writable> recordWriter;
+    private RecordWriter<Text, Mutation> recordWriter;
 
-   /**
-    * Constructor for subclasses to implement recordWriter
-    * @param recordWriter subclass instance
-    */
-    public HBaseVertexWriter(RecordWriter<ImmutableBytesWritable,
-             Writable> recordWriter) {
+    /**
+     * Constructor for use with subclasses
+     *
+     * @param recordWriter accumulo record writer
+     */
+    public AccumuloVertexWriter(RecordWriter<Text, Mutation> recordWriter) {
       this.recordWriter = recordWriter;
     }
 
@@ -106,13 +102,12 @@ public abstract class HBaseVertexOutputFormat<
      * @param context Context used to write the vertices.
      * @throws IOException
      */
-    public void initialize(TaskAttemptContext context)
-      throws IOException {
+    public void initialize(TaskAttemptContext context) throws IOException {
       this.context = context;
     }
 
     /**
-     * close
+     *  close
      *
      * @param context the context of the task
      * @throws IOException
@@ -128,13 +123,12 @@ public abstract class HBaseVertexOutputFormat<
      *
      * @return Record writer to be used for writing.
      */
-    public RecordWriter<ImmutableBytesWritable,
-            Writable> getRecordWriter() {
+    public RecordWriter<Text, Mutation> getRecordWriter() {
       return recordWriter;
     }
 
     /**
-     * getContext
+     * Get the context.
      *
      * @return Context passed to initialize.
      */
@@ -143,39 +137,39 @@ public abstract class HBaseVertexOutputFormat<
     }
 
   }
-
   /**
-   * setConf
    *
-   * @param conf Injected configuration instance
-   */
-  public static void setConf(Configuration conf) {
-    BASE_FORMAT.setConf(conf);
-  }
-
-  /**
    * checkOutputSpecs
    *
    * @param context information about the job
    * @throws IOException
    * @throws InterruptedException
    */
+  @Override
   public void checkOutputSpecs(JobContext context)
     throws IOException, InterruptedException {
-    BASE_FORMAT.checkOutputSpecs(context);
+    try {
+      accumuloOutputFormat.checkOutputSpecs(context);
+    } catch (IOException e) {
+      if (e.getMessage().contains("Output info has not been set")) {
+        throw new IOException(e.getMessage() + " Make sure you initialized" +
+                " AccumuloOutputFormat static setters " +
+                "before passing the config to GiraphJob.");
+      }
+    }
   }
 
   /**
    * getOutputCommitter
    *
    * @param context the task context
-   * @return  OutputCommitter ouputCommitter
+   * @return OutputCommitter
    * @throws IOException
    * @throws InterruptedException
    */
-  public OutputCommitter getOutputCommitter(
-    TaskAttemptContext context)
+  @Override
+  public OutputCommitter getOutputCommitter(TaskAttemptContext context)
     throws IOException, InterruptedException {
-    return BASE_FORMAT.getOutputCommitter(context);
+    return accumuloOutputFormat.getOutputCommitter(context);
   }
 }
